--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ We also offer readily available functional aerodynamic parts that are validated 
         <div class="service-item">
           <div class="project-img"><img src="./index_files/drivaersim1.jpg"></div>
           <h2>Universal CFD verified aerodynamic parts</h2>
-          <p>We also offer universal aerodynamic parts and accessories that are designed and engineered computatuinal simulation models, to insure proof of concept for a very wide range of applications, including but not limited to endplates for common wings, and front splitter diffusers.
+          <p>We also offer universal aerodynamic parts and accessories that are designed and engineered using computatuinal simulation models, to insure proof of concept for a very wide range of applications, including but not limited to endplates for common wings, and front splitter diffusers.
     
 </p>
         </div>
