--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ The nissna 350Z is a nice underestimated track car, everything is made to be upg
 </p>
           </div>
           <div class="project-img">
-            <img src="./index_files/350z1.png" alt="img">
+            <img src="./index_files/350Z1.png" alt="img">
           </div>
         </div>
         
