--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ The Nissan 350Z is a nice underestimated track car, everything is made to be upg
 </p>
           </div>
           <div class="project-img">
-            <img src="./index_files/carlineup350z.png" alt="img">
+            <img src="https://drive.google.com/uc?id=15n4liEx1eR8gInnW5OgKdLvgl8JKV9-F" alt="img">
           </div>
         </div>
         
